basic layout done colour,hover,click effects left

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <button class="num x1-size">+</button>
             </div>
             <div class="row5">
-                <button class="num x3-size">0</button>
-                <button class="equal x1-size">=</button>
+                <button class="num x3-size bottom-buttons">0</button>
+                <button class="equal x1-size bottom-buttons">=</button>
             </div>
         </div>
     </div>
