--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
 
     <div class="cal">
         <div class="display">0</div>
-        <div class="buttons">
+        <div>
             <div class="row1">
-                <button class="clear x2-size">C</button>
-                <button class="backspace x1-size">←</button>
-                <button class="div x1-size">÷</button>
+                <button class="button clear x2-size">C</button>
+                <button class="button backspace x1-size">←</button>
+                <button class="button div x1-size">÷</button>
             </div>
             <div class="row2">
-                <button class="num x1-size">7</button>
-                <button class="num x1-size">8</button>
-                <button class="num x1-size">9</button>
-                <button class="mul x1-size">×</button>
+                <button class="button num x1-size">7</button>
+                <button class="button num x1-size">8</button>
+                <button class="button num x1-size">9</button>
+                <button class="button mul x1-size">×</button>
             </div>
             <div class="row3">
-                <button class="num x1-size">4</button>
-                <button class="num x1-size">5</button>
-                <button class="num x1-size">6</button>
-                <button class="sub x1-size">-</button>
+                <button class="button num x1-size">4</button>
+                <button class="button num x1-size">5</button>
+                <button class="button num x1-size">6</button>
+                <button class="button sub x1-size">-</button>
             </div>
             <div class="row4">
-                <button class="num x1-size">1</button>
-                <button class="num x1-size">2</button>
-                <button class="add x1-size">3</button>
-                <button class="num x1-size">+</button>
+                <button class="button num x1-size">1</button>
+                <button class="button num x1-size">2</button>
+                <button class="button add x1-size">3</button>
+                <button class="button num x1-size">+</button>
             </div>
             <div class="row5">
-                <button class="num x3-size bottom-buttons">0</button>
-                <button class="equal x1-size bottom-buttons">=</button>
+                <button class="button num x3-size bottom-buttons">0</button>
+                <button class="button equal x1-size bottom-buttons">=</button>
             </div>
         </div>
     </div>
