--- a/index.html
+++ b/index.html
@@ -6,43 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="./calculator.js"></script>
 </head>
 
 <body>
 
     <div class="cal">
         <div class="display">0</div>
-        <div>
+        <div class="buttons">
             <div class="row1">
-                <button class="button clear x2-size">C</button>
+                <button class="button clear x2-size lhs-buttons">C</button>
                 <button class="button backspace x1-size">←</button>
-                <button class="button div x1-size right-buttons">÷</button>
+                <button class="button div x1-size ">÷</button>
             </div>
             <div class="row2">
-                <button class="button num x1-size">7</button>
+                <button class="button num x1-size lhs-buttons">7</button>
                 <button class="button num x1-size">8</button>
                 <button class="button num x1-size">9</button>
-                <button class="button mul x1-size right-buttons">×</button>
+                <button class="button mul x1-size ">×</button>
             </div>
             <div class="row3">
-                <button class="button num x1-size">4</button>
+                <button class="button num x1-size lhs-buttons">4</button>
                 <button class="button num x1-size">5</button>
                 <button class="button num x1-size">6</button>
-                <button class="button sub x1-size right-buttons">-</button>
+                <button class="button sub x1-size ">-</button>
             </div>
             <div class="row4">
-                <button class="button num x1-size">1</button>
+                <button class="button num x1-size lhs-buttons">1</button>
                 <button class="button num x1-size">2</button>
                 <button class="button add x1-size">3</button>
-                <button class="button num x1-size right-buttons">+</button>
+                <button class="button num x1-size ">+</button>
             </div>
             <div class="row5">
-                <button class="button num x3-size bottom-buttons">0</button>
-                <button class="button equal x1-size bottom-buttons right-buttons">=</button>
+                <button class="button num x2-size lhs-buttons">0</button>
+                <button class="button num x1-size ">.</button>
+                <button class="button equal x1-size ">=</button>
             </div>
         </div>
     </div>
-    
     
 </body>
 
