started with js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="cal">
         <div class="display">0</div>
-        <div class="buttons">
+        <section class="buttons">
             <div class="row1">
                 <button class="button clear x2-size lhs-buttons">C</button>
                 <button class="button backspace x1-size">←</button>
@@ -42,7 +42,7 @@
                 <button class="button num x1-size ">.</button>
                 <button class="button equal x1-size ">=</button>
             </div>
-        </div>
+        </section>
     </div>
     
 </body>
