backend almost completed, some bug left

--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
         <div class="display">0</div>
         <section class="buttons">
             <div class="row1">
-                <button class="button clear x2-size lhs-buttons">C</button>
-                <button class="button backspace x1-size">←</button>
-                <button class="button div x1-size ">÷</button>
+                <button class="button x2-size lhs-buttons">C</button>
+                <button class="button ">←</button>
+                <button class="button ">÷</button>
             </div>
             <div class="row2">
-                <button class="button num x1-size lhs-buttons">7</button>
-                <button class="button num x1-size">8</button>
-                <button class="button num x1-size">9</button>
-                <button class="button mul x1-size ">×</button>
+                <button class="button lhs-buttons">7</button>
+                <button class="button ">8</button>
+                <button class="button ">9</button>
+                <button class="button ">×</button>
             </div>
             <div class="row3">
-                <button class="button num x1-size lhs-buttons">4</button>
-                <button class="button num x1-size">5</button>
-                <button class="button num x1-size">6</button>
-                <button class="button sub x1-size ">-</button>
+                <button class="button lhs-buttons">4</button>
+                <button class="button ">5</button>
+                <button class="button ">6</button>
+                <button class="button ">-</button>
             </div>
             <div class="row4">
-                <button class="button num x1-size lhs-buttons">1</button>
-                <button class="button num x1-size">2</button>
-                <button class="button add x1-size">3</button>
-                <button class="button num x1-size ">+</button>
+                <button class="button lhs-buttons">1</button>
+                <button class="button ">2</button>
+                <button class="button ">3</button>
+                <button class="button ">+</button>
             </div>
             <div class="row5">
-                <button class="button num x2-size lhs-buttons">0</button>
-                <button class="button num x1-size ">.</button>
-                <button class="button equal x1-size ">=</button>
+                <button class="button x2-size lhs-buttons">0</button>
+                <button class="button ">.</button>
+                <button class="button ">=</button>
             </div>
         </section>
     </div>
