--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div class="display">0</div>
         <section class="buttons">
             <div class="row1">
-                <button class="button x2-size lhs-buttons">C</button>
+                <button class="button lhs-buttons">C</button>
+                <button class="button ">±</button>
                 <button class="button ">←</button>
                 <button class="button ">÷</button>
             </div>
