--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Calculator</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="./calculator.js"></script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168216839-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-168216839-1');
+    </script>
 </head>
 
 <body>
@@ -45,7 +54,7 @@
             </div>
         </section>
     </div>
-    
+    <script src="./calculator.js"></script>
 </body>
 
 </html>
