fix: structure of the root folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Calculator</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/main.css">
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168216839-1"></script>
@@ -54,7 +54,7 @@
             </div>
         </section>
     </div>
-    <script src="./calculator.js"></script>
+    <script src="./javascript/calculator.js"></script>
 </body>
 
 </html>
