--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#000000" />
     <title>Calculator</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link
+            rel="shortcut icon"
+            type="image/x-icon"
+            href="./images/logo.svg"
+        />
+    <link rel="apple-touch-icon" href="./images/icon.png" />
+    <link rel="manifest" href="./manifest.json" />
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168216839-1"></script>
@@ -56,5 +64,14 @@
     </div>
     <script src="./javascript/calculator.js"></script>
 </body>
+<script>
+    if (!navigator.serviceWorker.controller) {
+        navigator.serviceWorker.register("./sw.js").then(function (reg) {
+            console.log(
+                "Service worker has been registered for scope: " + reg.scope
+            );
+        });
+    }
+</script>
 
 </html>
