--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A calculator made by Rohit Dhatrak"/>
     <meta name="theme-color" content="#000000" />
     <title>Calculator</title>
     <link rel="stylesheet" href="./css/main.css">
