--- a/index.html
+++ b/index.html
@@ -31,13 +31,30 @@
 
     <div class="cal">
         <div class="display">0</div>
-        <section class="buttons">
+        <section>
             <div class="row1">
-                <button class="button lhs-buttons">C</button>
-                <button class="button ">±</button>
-                <button class="button ">←</button>
-                <button class="button ">÷</button>
+                <button class="button lhs-buttons AC-button">AC</button>
+                <button class="button hidden sign-button">
+                    <img
+                        class="icons"
+                        src="./images/plus-minus.svg"
+                        alt="Backspace"
+                        style="width: 0.8em;"
+                    />
+                </button>
+                <button class="button hidden back-button">
+                    <img
+                        class="icons"
+                        src="./images/backspace.svg"
+                        alt="Backspace"
+                        style="width: 0.8em;"
+                    />
+                </button>
+                <button class="button divide ">÷</button>
             </div>
+        </section>
+        
+        <section class="buttons">
             <div class="row2">
                 <button class="button lhs-buttons">7</button>
                 <button class="button ">8</button>
